[package]
name = "mcutils"
version = "0.2.1"
edition = "2024"
description = "Save and load regions of a local Minecraft world"
authors = ["darcy"]
license = "GPL-3.0"
documentation = "https://docs.rs/mcutils/latest/mcutils"
repository = "https://github.com/dxrcy/mcutils"
keywords = ["minecraft", "api", "mcrs"]
exclude = ["target"]

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
anyhow = "1.0.97"
mcrs = "0.4.2"
# mcrs = { path = "../mcrs" }
# mcrs = { git = "https://github.com/dxrcy/mcrs" }
